compiler/tests/snapshots/parser__parser_from_path@10_tuple_expr.bakugo.snap
---
source: tests/parser.rs
expression: parsed
input_file: tests/examples/10_tuple_expr.bakugo
---
pos:
  - 0
  - 95
pairs:
  - pos:
      - 0
      - 95
    rule: SourceFile
    inner:
      pos:
        - 0
        - 95
      pairs:
        - pos:
            - 0
            - 93
          rule: TopLevelDecl
          inner:
            pos:
              - 0
              - 93
            pairs:
              - pos:
                  - 0
                  - 93
                rule: FunctionDecl
                inner:
                  pos:
                    - 5
                    - 91
                  pairs:
                    - pos:
                        - 5
                        - 9
                      rule: Ident
                      inner: main
                    - pos:
                        - 9
                        - 22
                      rule: Signature
                      inner:
                        pos:
                          - 9
                          - 22
                        pairs:
                          - pos:
                              - 9
                              - 11
                            rule: Parameters
                            inner: ()
                          - pos:
                              - 12
                              - 22
                            rule: Type
                            inner:
                              pos:
                                - 12
                                - 22
                              pairs:
                                - pos:
                                    - 12
                                    - 22
                                  rule: Tuple
                                  inner:
                                    pos:
                                      - 13
                                      - 21
                                    pairs:
                                      - pos:
                                          - 13
                                          - 21
                                        rule: TypeList
                                        inner:
                                          pos:
                                            - 13
                                            - 21
                                          pairs:
                                            - pos:
                                                - 13
                                                - 16
                                              rule: Type
                                              inner:
                                                pos:
                                                  - 13
                                                  - 16
                                                pairs:
                                                  - pos:
                                                      - 13
                                                      - 16
                                                    rule: Ident
                                                    inner: int
                                            - pos:
                                                - 18
                                                - 21
                                              rule: Type
                                              inner:
                                                pos:
                                                  - 18
                                                  - 21
                                                pairs:
                                                  - pos:
                                                      - 18
                                                      - 21
                                                    rule: Ident
                                                    inner: int
                    - pos:
                        - 26
                        - 91
                      rule: StatementList
                      inner:
                        pos:
                          - 26
                          - 91
                        pairs:
                          - pos:
                              - 26
                              - 90
                            rule: Declaration
                            inner:
                              pos:
                                - 26
                                - 90
                              pairs:
                                - pos:
                                    - 26
                                    - 90
                                  rule: VarDecl
                                  inner:
                                    pos:
                                      - 34
                                      - 87
                                    pairs:
                                      - pos:
                                          - 34
                                          - 51
                                        rule: VarSpec
                                        inner:
                                          pos:
                                            - 34
                                            - 51
                                          pairs:
                                            - pos:
                                                - 34
                                                - 36
                                              rule: IdentifierList
                                              inner:
                                                pos:
                                                  - 34
                                                  - 35
                                                pairs:
                                                  - pos:
                                                      - 34
                                                      - 35
                                                    rule: Ident
                                                    inner: a
                                            - pos:
                                                - 38
                                                - 51
                                              rule: ExpressionList
                                              inner:
                                                pos:
                                                  - 38
                                                  - 51
                                                pairs:
                                                  - pos:
                                                      - 38
                                                      - 51
                                                    rule: TupleExpr
                                                    inner:
                                                      pos:
                                                        - 39
                                                        - 50
                                                      pairs:
                                                        - pos:
                                                            - 39
                                                            - 41
                                                          rule: IntLit
                                                          inner: "34"
                                                        - pos:
                                                            - 43
                                                            - 50
                                                          rule: TupleExpr
                                                          inner:
                                                            pos:
                                                              - 44
                                                              - 49
                                                            pairs:
                                                              - pos:
                                                                  - 44
                                                                  - 45
                                                                rule: IntLit
                                                                inner: "4"
                                                              - pos:
                                                                  - 47
                                                                  - 49
                                                                rule: IntLit
                                                                inner: "45"
                                      - pos:
                                          - 51
                                          - 52
                                        rule: Semicolon
                                        inner: ;
                                      - pos:
                                          - 55
                                          - 73
                                        rule: VarSpec
                                        inner:
                                          pos:
                                            - 55
                                            - 73
                                          pairs:
                                            - pos:
                                                - 55
                                                - 57
                                              rule: IdentifierList
                                              inner:
                                                pos:
                                                  - 55
                                                  - 56
                                                pairs:
                                                  - pos:
                                                      - 55
                                                      - 56
                                                    rule: Ident
                                                    inner: a
                                            - pos:
                                                - 59
                                                - 73
                                              rule: ExpressionList
                                              inner:
                                                pos:
                                                  - 59
                                                  - 73
                                                pairs:
                                                  - pos:
                                                      - 59
                                                      - 73
                                                    rule: TupleExpr
                                                    inner:
                                                      pos:
                                                        - 60
                                                        - 71
                                                      pairs:
                                                        - pos:
                                                            - 60
                                                            - 62
                                                          rule: IntLit
                                                          inner: "34"
                                                        - pos:
                                                            - 64
                                                            - 71
                                                          rule: TupleExpr
                                                          inner:
                                                            pos:
                                                              - 65
                                                              - 70
                                                            pairs:
                                                              - pos:
                                                                  - 65
                                                                  - 66
                                                                rule: IntLit
                                                                inner: "4"
                                                              - pos:
                                                                  - 68
                                                                  - 70
                                                                rule: IntLit
                                                                inner: "45"
                                      - pos:
                                          - 73
                                          - 74
                                        rule: Semicolon
                                        inner: ;
                                      - pos:
                                          - 77
                                          - 86
                                        rule: VarSpec
                                        inner:
                                          pos:
                                            - 77
                                            - 86
                                          pairs:
                                            - pos:
                                                - 77
                                                - 79
                                              rule: IdentifierList
                                              inner:
                                                pos:
                                                  - 77
                                                  - 78
                                                pairs:
                                                  - pos:
                                                      - 77
                                                      - 78
                                                    rule: Ident
                                                    inner: b
                                            - pos:
                                                - 81
                                                - 86
                                              rule: ExpressionList
                                              inner:
                                                pos:
                                                  - 81
                                                  - 86
                                                pairs:
                                                  - pos:
                                                      - 81
                                                      - 86
                                                    rule: TupleExpr
                                                    inner:
                                                      pos:
                                                        - 82
                                                        - 84
                                                      pairs:
                                                        - pos:
                                                            - 82
                                                            - 84
                                                          rule: IntLit
                                                          inner: "34"
                                      - pos:
                                          - 86
                                          - 87
                                        rule: Semicolon
                                        inner: ;
                          - pos:
                              - 90
                              - 91
                            rule: Semicolon
                            inner: ;
        - pos:
            - 93
            - 94
          rule: Semicolon
          inner: ;
        - pos:
            - 95
            - 95
          rule: EOI
          inner: ""

